--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.generate-ddl=true
 
 jwt.secret = superconfidential
-
+delay_before_locking_order = 3
+delay_before_stopping_order = 1
