Application property commented properly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.password=terrae
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server.port = 9999
 
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.generate-ddl=true
 
 jwt.secret = superconfidential
 delay_before_locking_order = 3
