--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=jdbc:mysql://10.31.70.114:3307/viaterrae?useSSL=false
-spring.datasource.username=via
-spring.datasource.password=terrae
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/viaterrae?useSSL=false
 
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.datasource.username=root
+spring.datasource.password=password
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server.port = 9999
 
+#spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.generate-ddl=true
 
