--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/viaterrae?useSSL=false
+spring.datasource.url=jdbc:mysql://10.31.70.212:3306/viaterrae?useSSL=false
 
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.username=via
+spring.datasource.password=terrae
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server.port = 9999
