--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.datasource.url=jdbc:mysql://10.31.70.114:3307/viaterrae?useSSL=false
+# Two database available : 3306 for devbase / 3307 for test
+spring.datasource.url=jdbc:mysql://10.31.70.113:3307/viaterrae?useSSL=false
 spring.datasource.username=via
 spring.datasource.password=terrae
 
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server.port = 9999
 
-#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = create
 #spring.jpa.generate-ddl=true
 
 jwt.secret = superconfidential
